<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/marginLogo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/bus_stop" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="@dimen/witdh_buttons_login"
                            android:layout_height="@dimen/height_buttons_login"
                            android:background="@drawable/rounded_white"
                            android:elevation="2dp">

                            <EditText
                                android:id="@+id/edit_username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:hint="@string/username"
                                android:imeOptions="actionNext"
                                android:singleLine="true"
                                android:textColorHint="@color/background_app" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="@dimen/witdh_buttons_login"
                            android:layout_height="@dimen/height_buttons_login"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rounded_white"
                            android:elevation="2dp">

                            <EditText
                                android:id="@+id/edit_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:hint="@string/password"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:singleLine="true"
                                android:textColorHint="@color/background_app" />


                        </RelativeLayout>


                        <RelativeLayout
                            android:id="@+id/sign_in_box"
                            android:layout_width="@dimen/witdh_buttons_login"
                            android:layout_height="@dimen/height_buttons_login"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rounded_blue"
                            android:elevation="2dp">

                            <TextView
                                android:id="@+id/sign_in"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/login"
                                android:textColor="@android:color/white" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/or"
                                android:textColor="@android:color/white" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/sign_up_box"
                            android:layout_width="@dimen/witdh_buttons_login"
                            android:layout_height="@dimen/height_buttons_login"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/rounded_blue"
                            android:elevation="2dp">

                            <TextView
                                android:id="@+id/sign_up"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/sign_up"
                                android:textColor="@android:color/white" />


                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>