<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CadastroActivity"
    tools:showIn="@layout/activity_cadastro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/bus_stop" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="@dimen/witdh_buttons_login"
                            android:layout_height="@dimen/height_buttons_login"
                            android:background="@drawable/rounded_white">

                            <EditText
                                android:id="@+id/edit_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:hint="@string/email"
                                android:imeOptions="actionNext"
                                android:nextFocusRight="@+id/edit_name"
                                android:singleLine="true"
                                android:textColorHint="@color/background_app" />

                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="@dimen/witdh_buttons_login"
                            android:layout_height="@dimen/height_buttons_login"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rounded_white">

                            <EditText
                                android:id="@+id/edit_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:hint="@string/name"
                                android:imeOptions="actionNext"
                                android:nextFocusRight="@+id/edit_email"
                                android:singleLine="true"
                                android:textColorHint="@color/background_app" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="@dimen/witdh_buttons_login"
                            android:layout_height="@dimen/height_buttons_login"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rounded_white">

                            <EditText
                                android:id="@+id/edit_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:imeOptions="actionNext"
                                android:nextFocusDown="@id/edit_email"
                                android:singleLine="true"
                                android:textColorHint="@color/background_app" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">


                            <RelativeLayout
                                android:id="@+id/sign_up_box"
                                android:layout_width="@dimen/witdh_buttons_login"
                                android:layout_height="@dimen/height_buttons_login"
                                android:layout_centerHorizontal="true"
                                android:background="@drawable/rounded_green">

                                <TextView
                                    android:id="@+id/sign_up"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/sign_up"
                                    android:textColor="@color/white" />


                            </RelativeLayout>

                        </RelativeLayout>


                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>